--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -28,6 +28,8 @@ added, new account
 - Update basket
 
 == todo ==
+- set default vat rate
+- show vat value on admin order view
 - add images to products
 - sort user lists
 - make a quick search field for users
