Improved test data.

--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -1,6 +1,7 @@
 == scheduled for beta7 ==
 - constraints:
   - Month can only have AutoRenewal value A
+  - Cannot have ExpireDate and Month
 - cannot resume an expired subscription from subscription page ( admin / user )
 - view if subscription is active or not
 - test all combinations of subscriptions:
