--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -3,6 +3,7 @@
   - Month can only have AutoRenewal value A
   - Cannot have ExpireDate and Month
 - cannot resume an expired subscription from subscription page ( admin / user )
+- cannot pause lifetimee membership
 - view if subscription is active or not
 - test all combinations of subscriptions:
 - obey rules of club_user_currency (danish: 1.00, us: 5.5)
