Fixed all combinations of subscriptions.

--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -2,10 +2,10 @@
 - constraints:
   - Month can only have AutoRenewal value A
   - Only One of following is mandatory: Month, ExpireDate, Lifetime
+  - Cannot have ExpireDate without StartDate
 - cannot resume an expired subscription from subscription page ( admin / user )
 - cannot pause lifetimee membership
 - view if subscription is active or not
-- test all combinations of subscriptions:
 - obey rules of club_user_currency (danish: 1.00, us: 5.5)
 - add event managers to events, they should be able to see all events in the club
 - make sure we can tax shipping and payment
