--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -4,6 +4,7 @@
   - Only One of following is mandatory: Month, ExpireDate, Lifetime
   - Cannot have ExpireDate without StartDate
 - obey rules of club_user_currency (danish: 1.00, us: 5.5)
+  - can we use a twig filter here?
 - add class active to right menu
 - event calendar view
 - event agenda view
