--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -22,6 +22,7 @@
 - add icon to paid and unpaid (event)
 - remove confirm on view members
 - add boolean icon on event members
+- prettier date widgets
 - its like the session times out too soon
 - set default vat rate
 - show vat value on admin order view
