--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -5,21 +5,22 @@
 - merge users
 - find out the syntax for member_numbers
 - Update basket
-
-== todo ==
 - add icon to paid and unpaid (event)
 - add boolean icon on event members
+- rewrite format to date in admin events
 - prettier date widgets
+- show vat value on admin order view
+- problem with renewal of fixtures memberships
+- we have a bug in the paginator counter, check user to get it right
+
+== todo ==
 - its like the session times out too soon
 - set default vat rate
-- show vat value on admin order view
 - add images to products
 - sort user lists
 - make a quick search field for users
 - add category priority ( this will help pick right account_number for products )
 - configurable emails sent on different events
-- problem with renewal of fixtures memberships
-- we have a bug in the paginator counter, check user to get it right
 
 == improvements ==
 - When edit or create a new dynamic group, recalc users
