Fixed cart after removed product.

--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -6,6 +6,7 @@
 - add icon to paid and unpaid (event)
 - add boolean icon on event members
 - prettier date widgets
+- clear cache after upgrade in README
 
 == todo ==
 - its like the session times out too soon
