--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -174,6 +174,43 @@
         <source>Remove installer file &lt;strong&gt;%path%&lt;/strong&gt;</source>
         <target>Fjern installations filen &lt;strong&gt;%path%&lt;/strong&gt;</target>
       </trans-unit>
+      <trans-unit id="44">
+        <source>View cart</source>
+        <target>Vis kurv</target>
+      </trans-unit>
+      <trans-unit id="45">
+        <source>Categories</source>
+        <target>Kategorier</target>
+      </trans-unit>
+      <trans-unit id="46">
+        <source>Products</source>
+        <target>Produkter</target>
+      </trans-unit>
+      <trans-unit id="47">
+        <source>Product name</source>
+        <target>Produkt navn</target>
+      </trans-unit>
+      <trans-unit id="48">
+        <source>Price</source>
+        <target>Pris</target>
+      </trans-unit>
+      <trans-unit id="49">
+        <source>Action</source>
+        <target>Handling</target>
+      </trans-unit>
+      <trans-unit id="50">
+        <source>No image</source>
+        <target>Ingen billede</target>
+      </trans-unit>
+      <trans-unit id="51">
+        <source>Put in cart</source>
+        <target>Læg i kurv</target>
+      </trans-unit>
+      <trans-unit id="52">
+        <source>There is no products in this category.</source>
+        <target>Der er ingen produkter i denne kategori.</target>
+      </trans-unit>
+
 
     </body>
   </file>
